--- a/templates/CPSapp/aboutme.html
+++ b/templates/CPSapp/aboutme.html
@@ -2,19 +2,10 @@
 {% load static %}
 {% block content %}
 
-    <h2>All About me....!</h2>
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-6" >
-                
-                <img src="{% static 'CPSapp/resume_pic.jpg'%}" alt="temp" style="height:500px;">
-          </div>
-          <div class="col-md-6">
-              <a href="{% static 'CPSapp/resume.jpg'%}"><img src="{% static 'CPSapp/resume.jpg'%}" alt="temp"></a>
-                
-          </div>
-        </div>  
-    </div>
+
+<div class="container">
+    <h1 style="text-align: center;">About Us</h1>
+</div>
 
 
 {% endblock %}
